Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47154

iOS SecureTransport SSLRead failed failed with: -9805

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.5.1
    • 5.5.0
    • Network: SSL
    • None
    • iOS 5.5.0 w/SecureTransport, Mac desktop 5.5.0 w/SecureTransport
    • iOS/tvOS/watchOS
    • 3ebbd5db7b96b8759119f7811bb40f5e1de45d0f

      On making a secure API request using the SecureTransport backend, I get the following error during connect:

      QSslSocketBackendPrivate::transmit() SSLRead failed with: -9805

      This prevents the response from being treated as successful even though it does complete with a valid result after the error. Same thing happens on desktop Mac when compiled with SecureTransport.

      Attached is a patch from Jeremy Lainé (thank you!) which appears to fix the problem.

        For Gerrit Dashboard: QTBUG-47154
        # Subject Branch Project Status CR V

            sharky Jeremy Lainé
            ttgilhagi Gil Hagi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes